--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- link css -->
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -49,7 +49,7 @@
 
     <!-- Section about start -->
     <section id="about" class="about">
-        <h2>Tentang Kami</h2>
+        <h2 class="title-header">Tentang Kami</h2>
         <div class="row">
             <div class="about-img">
                 <img src="about-img.jpg" alt="about img" />
@@ -69,7 +69,7 @@
 
     <!-- Menu section start -->
     <section id="menu-kelapa" class="menu-kelapa">
-        <h2>Menu Kami</h2>
+        <h2 class="title-header">Menu Kami</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ratione rerum consectetur, deleniti ipsum pariatur?
         </p>
@@ -123,7 +123,7 @@
     <!-- Menu section end -->
     <!-- section contact start -->
     <section id="contact" class="contact">
-        <h2>Contact</h2>
+        <h2 class="title-header">Contact</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quisquam.
         </p>
@@ -132,7 +132,7 @@
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
 
             <form action="">
-                <h2>Silahkan Order</h2>
+                <h2 class="title-Header">Silahkan Order</h2>
                 <div class="input-group">
                     <input type="text" name="nama" id="nama" placeholder="Masukkan Nama">
 
