--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 
     <!-- link css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         </header>
 
         <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu-kelapa">Menu</a></li>
             <li><a href="#contact">Contact </a></li>
@@ -30,7 +30,7 @@
         <ul class="menu-list">
             <a href="#" id="instagram"><i data-feather="instagram"></i> </a>
             <a href="#" id="linkedin"><i data-feather="linkedin"></i> </a>
-            <a href="#" id="menu"><i data-feather="menu"></i> </a>
+            <a id="menu"><i data-feather="menu"></i> </a>
         </ul>
     </nav>
     <!-- close navigation -->
@@ -40,9 +40,9 @@
         <main class="contain">
             <h1 class="judul">Kelapa <span>Nusantara</span></h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo voluptatem maxime deleniti beatae inventore? Perspiciatis?
+                Kekayaan Tropis Dalam Genggaman: Temukan Manfaat Kesehatan dan Kenikmatan Alamiah dengan Kelapa <br> Kelapa: Manfaat Alamiah untuk Gaya Hidup Sehat dan Berkelanjutan
             </p>
-            <a href="#" class="hubungi">Hubungi</a>
+            <a href="" class="hubungi">Hubungi</a>
         </main>
     </section>
     <!-- Hero section end -->
@@ -52,15 +52,15 @@
         <h2 class="title-header">Tentang Kami</h2>
         <div class="row">
             <div class="about-img">
-                <img src="about-img.jpg" alt="about img" />
+                <img src="img/about-img.jpg" alt="about img" />
             </div>
             <div class="content-kami">
                 <h3>Alasan memilih Kelapa Nusantara</h3>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis omnis, recusandae obcaecati veniam libero incidunt!
+                    Memilih kelapa dari Indonesia adalah pilihan yang baik karena kualitasnya yang terjamin, keanekaragaman produknya, serta dukungannya terhadap ekonomi lokal dan praktik pertanian berkelanjutan.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati sint rerum optio id culpa repellat provident fugiat ducimus quam quo!
+                    Kelapa Indonesia menawarkan kualitas unggul, beragam produk, dan mendukung ekonomi lokal serta praktik pertanian yang berkelanjutan.
                 </p>
             </div>
         </div>
@@ -71,50 +71,51 @@
     <section id="menu-kelapa" class="menu-kelapa">
         <h2 class="title-header">Menu Kami</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ratione rerum consectetur, deleniti ipsum pariatur?
+            Berikut adalah daftar produk kelapa yang kami tawarkan:
         </p>
         <div class="row">
             <div class="row-kartu">
-                <img src="menu.jpg" alt="menu1" class="menu-kartu-img" />
+                <img src="img/kelapa.jpg" alt="menu1" class="menu-kartu-img" />
                 <h3 class="menu-kartu-text">Kelapa</h3>
                 <p class="menu-card-deskripsi">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing.
+                    Kelapa adalah buah tropis yang berasal dari pohon kelapa. Buah ini memiliki daging putih yang dapat dimakan dan airnya yang segar. Kelapa memiliki banyak manfaat bagi kesehatan dan berbagai bagian dari pohon kelapa juga dimanfaatkan untuk berbagai keperluan
+                    manusia.
                 </p>
                 <p></p>
             </div>
 
             <div class="row-kartu">
-                <img src="menu.jpg" alt="menu1" class="menu-kartu-img" />
-                <h3 class="menu-kartu-text">Kelapa</h3>
+                <img src="img/es-kelapa.jpg" alt="menu1" class="menu-kartu-img" />
+                <h3 class="menu-kartu-text">Es Kelapa</h3>
                 <p class="menu-card-deskripsi">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing.
+                    Es kelapa adalah minuman segar yang terbuat dari air kelapa dan es batu, disajikan sebagai minuman penyegar dengan rasa manis alami.
                 </p>
                 <p></p>
             </div>
 
             <div class="row-kartu">
-                <img src="menu.jpg" alt="menu1" class="menu-kartu-img" />
-                <h3 class="menu-kartu-text">Kelapa</h3>
+                <img src="img/kelapa_parut.jpg" alt="menu1" class="menu-kartu-img" />
+                <h3 class="menu-kartu-text">Kelapa Parut</h3>
                 <p class="menu-card-deskripsi">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing.
+                    Kelapa parut adalah daging kelapa yang diparut menjadi serpihan kecil, sering digunakan dalam berbagai hidangan sebagai bahan tambahan atau bumbu.
                 </p>
                 <p></p>
             </div>
 
             <div class="row-kartu">
-                <img src="menu.jpg" alt="menu1" class="menu-kartu-img" />
-                <h3 class="menu-kartu-text">Kelapa</h3>
+                <img src="img/minyak_kelapa.jpg" />
+                <h3 class="menu-kartu-text"> Minyak Kelapa</h3>
                 <p class="menu-card-deskripsi">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing.
+                    Minyak kelapa adalah minyak nabati yang diekstrak dari daging kelapa. Biasanya digunakan untuk memasak, perawatan kulit, dan rambut karena kandungan asam lemaknya yang sehat.
                 </p>
                 <p></p>
             </div>
 
             <div class="row-kartu">
-                <img src="menu.jpg" alt="menu1" class="menu-kartu-img" />
-                <h3 class="menu-kartu-text">Kelapa</h3>
+                <img src="img/santan_kelapa.jpg" alt="menu1" class="menu-kartu-img" />
+                <h3 class="menu-kartu-text">Santan Kelapa</h3>
                 <p class="menu-card-deskripsi">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing.
+                    Santan kelapa adalah cairan kental yang diekstrak dari parutan daging kelapa, digunakan sebagai bahan dalam masakan untuk memberikan rasa kaya dan konsistensi yang lembut.
                 </p>
                 <p></p>
             </div>
@@ -125,7 +126,7 @@
     <section id="contact" class="contact">
         <h2 class="title-header">Contact</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, quisquam.
+            Untuk kontak kami, silakan hubungi kami melalui:
         </p>
         <div class="row-maps">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63363.33210972149!2d109.08985164739146!3d-6.984731165583662!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fbef9f20859e3%3A0x4027a76e352f800!2sSlawi%2C%20Kec.%20Slawi%2C%20Kabupaten%20Tegal%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1697512571329!5m2!1sid!2sid"
@@ -144,8 +145,9 @@
 
                         </div>
                         <button type="submit" class="btn">Kirim Pesan</button>
+                    </div>
+                </div>
             </form>
-            </div>
     </section>
     <!-- section contact end -->
 
