revisi img responsif mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul class="menu-list">
             <a href="#" id="instagram"><i data-feather="instagram"></i> </a>
             <a href="#" id="linkedin"><i data-feather="linkedin"></i> </a>
-            <a id="menu"><i data-feather="menu"></i> </a>
+            <a id="menu"><i data-feather="menu"></i></a>
         </ul>
     </nav>
     <!-- close navigation -->
@@ -38,11 +38,11 @@
     <!-- Hero section start -->
     <section class="hero" id="home">
         <main class="contain">
-            <h1 class="judul">Kelapa <span>Nusantara</span></h1>
+            <h1 class="judul">Kelapa<span>Nusantara</span></h1>
             <p>
                 Kekayaan Tropis Dalam Genggaman: Temukan Manfaat Kesehatan dan Kenikmatan Alamiah dengan Kelapa <br> Kelapa: Manfaat Alamiah untuk Gaya Hidup Sehat dan Berkelanjutan
             </p>
-            <a href="" class="hubungi">Hubungi</a>
+            <a href="#" class="hubungi">Hubungi</a>
         </main>
     </section>
     <!-- Hero section end -->
@@ -74,16 +74,6 @@
             Berikut adalah daftar produk kelapa yang kami tawarkan:
         </p>
         <div class="row">
-            <div class="row-kartu">
-                <img src="img/kelapa.jpg" alt="menu1" class="menu-kartu-img" />
-                <h3 class="menu-kartu-text">Kelapa</h3>
-                <p class="menu-card-deskripsi">
-                    Kelapa adalah buah tropis yang berasal dari pohon kelapa. Buah ini memiliki daging putih yang dapat dimakan dan airnya yang segar. Kelapa memiliki banyak manfaat bagi kesehatan dan berbagai bagian dari pohon kelapa juga dimanfaatkan untuk berbagai keperluan
-                    manusia.
-                </p>
-                <p></p>
-            </div>
-
             <div class="row-kartu">
                 <img src="img/es-kelapa.jpg" alt="menu1" class="menu-kartu-img" />
                 <h3 class="menu-kartu-text">Es Kelapa</h3>
