loping and css display

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- link css -->
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/responsif.css">
 </head>
 
 <body>
@@ -83,32 +84,36 @@
                 <p></p>
             </div>
 
-            <div class="row-kartu">
-                <img src="img/kelapa_parut.jpg" alt="menu1" class="menu-kartu-img" />
-                <h3 class="menu-kartu-text">Kelapa Parut</h3>
-                <p class="menu-card-deskripsi">
-                    Kelapa parut adalah daging kelapa yang diparut menjadi serpihan kecil, sering digunakan dalam berbagai hidangan sebagai bahan tambahan atau bumbu.
-                </p>
-                <p></p>
-            </div>
+            <!-- saya bikin div kosong supaya bikin komentar lebih gampang -->
+            <!-- <div>
+                <div class="row-kartu">
+                    <img src="img/kelapa_parut.jpg" alt="menu1" class="menu-kartu-img" />
+                    <h3 class="menu-kartu-text">Kelapa Parut</h3>
+                    <p class="menu-card-deskripsi">
+                        Kelapa parut adalah daging kelapa yang diparut menjadi serpihan kecil, sering digunakan dalam berbagai hidangan sebagai bahan tambahan atau bumbu.
+                    </p>
+                    <p></p>
+                </div>
 
-            <div class="row-kartu">
-                <img src="img/minyak_kelapa.jpg" />
-                <h3 class="menu-kartu-text"> Minyak Kelapa</h3>
-                <p class="menu-card-deskripsi">
-                    Minyak kelapa adalah minyak nabati yang diekstrak dari daging kelapa. Biasanya digunakan untuk memasak, perawatan kulit, dan rambut karena kandungan asam lemaknya yang sehat.
-                </p>
-                <p></p>
-            </div>
+                <div class="row-kartu">
+                    <img src="img/minyak_kelapa.jpg" />
+                    <h3 class="menu-kartu-text"> Minyak Kelapa</h3>
+                    <p class="menu-card-deskripsi">
+                        Minyak kelapa adalah minyak nabati yang diekstrak dari daging kelapa. Biasanya digunakan untuk memasak, perawatan kulit, dan rambut karena kandungan asam lemaknya yang sehat.
+                    </p>
+                    <p></p>
+                </div>
 
-            <div class="row-kartu">
-                <img src="img/santan_kelapa.jpg" alt="menu1" class="menu-kartu-img" />
-                <h3 class="menu-kartu-text">Santan Kelapa</h3>
-                <p class="menu-card-deskripsi">
-                    Santan kelapa adalah cairan kental yang diekstrak dari parutan daging kelapa, digunakan sebagai bahan dalam masakan untuk memberikan rasa kaya dan konsistensi yang lembut.
-                </p>
-                <p></p>
-            </div>
+                <div class="row-kartu">
+                    <img src="img/santan_kelapa.jpg" alt="menu1" class="menu-kartu-img" />
+                    <h3 class="menu-kartu-text">Santan Kelapa</h3>
+                    <p class="menu-card-deskripsi">
+                        Santan kelapa adalah cairan kental yang diekstrak dari parutan daging kelapa, digunakan sebagai bahan dalam masakan untuk memberikan rasa kaya dan konsistensi yang lembut.
+                    </p>
+                    <p></p>
+                </div>
+            </div> -->
+
         </div>
     </section>
     <!-- Menu section end -->
