--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
 
         <ul class="menu">
-            <li><a href="/">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu-kelapa">Menu</a></li>
             <li><a href="#contact">Contact </a></li>
